added initial files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
       "~/*": ["./app/*"]
     },
     // Vite takes care of building everything, not tsc.
-    "noEmit": true
+    "noEmit": true,
   }
 }
