--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@remix-run/react": "^2.8.1",
     "@remix-run/serve": "^2.8.1",
     "@wixc3/patterns": "^17.1.1",
+    "classnames": "^2.5.1",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
